--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -28,7 +28,7 @@
                     
                     <a th:href = "@{/userList}">Users</a>
                     <a th:href = "@{/itemList}">Items</a>
-                    <a th:href = "@{/orderList}">Orders</a>
+                    <a th:href = "@{/orderListAllUsers}">Orders</a>
                     <a th:href = "@{/usersRolesList}">Roles</a>
                 </div>
                
