--- a/src/main/resources/templates/checkOut.html
+++ b/src/main/resources/templates/checkOut.html
@@ -21,8 +21,8 @@
 <table border="1" class="table table-striped table-responsive-md">
     <thead>
     <tr>
-        <th>Order Id</th>
-        <th>User Number</th>
+        <th>Order ID</th>
+        <th>User ID</th>
         <th>Order Status</th>
 
     </tr>
@@ -30,7 +30,7 @@
     <tbody>
     <tr th:each="orders : ${orderList}">
         <td th:text="${orders.orderId}"></td>
-        <td th:text="${orders.userNum}"></td>
+        <td th:text="${orders.users.userId}"></td>
         <td th:text="${orders.orderStatus}"></td>
     </tr>
     </tbody>
