--- a/src/main/resources/templates/list_usersRoles.html
+++ b/src/main/resources/templates/list_usersRoles.html
@@ -29,6 +29,7 @@
         </tr>
         </tbody>
     </table>
+    <a th:href="@{/adminHome}" class="btn btn-info">Back to Admin Home</a>
 </div>
 </body>
 </html>
