--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -1,45 +1,140 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
     	<meta charset="ISO-8859-1">
         <title>Admin Page</title>
-        <link rel="stylesheet" href="" />
+        <link rel="stylesheet" href="adminHome.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
     </head>
     
     <body>
         <header class="header">
             <div class="brand">
-                <a th:href="@{/}">MarHat</a>
+                <a th:href="@{/}">HATRITA</a>
             </div>
             <div class="header-links">
-                <!--                    <a th:href="">Cart</a>-->
-                <a th:href="@{/signin}">Sign In</a>
-                <a th:href = "@{/adminHome}">Admin</a>
+                <a th:href="@{/cart}">Cart</a>
+                <a th:href="@{/login}">Sign In</a>
+                <a sec:authorize="isAuthenticated()" th:href="@{/logout}">Sign Out</a>
+                <a sec:authorize="hasAuthority('Admin')" th:href="@{/adminHome}">Admin</a>
             </div>
         </header>
-        <div class="grid-container">
-            <br>
-            <br>
-            <h1>Admin Page</h1>
-                <div class="brand">
-                    
-                    <a th:href = "@{/userList}">Users</a>
-                    <a th:href = "@{/itemList}">Items</a>
-                    <a th:href = "@{/orderListAllUsers}">Orders</a>
-                    <a th:href = "@{/usersRolesList}">Roles</a>
-                </div>
-               
 
-            
-                
-            
-            <footer class="footer">
-            
-            </footer>
+<!--        <div class="wrapper">-->
+<!--            <nav id="sidebar">-->
+<!--                <div class="sidebar-header">-->
+<!--                    <h4>Welcome, admin</h4>-->
+<!--                </div>-->
+
+<!--                <ul class="list-unstyled components">-->
+<!--                    <p>Dashboard</p>-->
+<!--                    <li>-->
+<!--                        <a th:href = "@{/userList}">User List</a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a th:href = "@{/itemList}">Item List</a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a th:href = "@{/orderListAllUsers}">Order List</a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a th:href = "@{/usersRolesList}">User's Role List</a>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <a href="#">Contact</a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </nav>-->
+<!--        </div>-->
+        <div class="columns">
+            <div class="side-bar">
+                <div class="position-sticky pt-md-5">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" th:href = "@{/adminHome}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                                <span class="ml-2">Dashboard</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href = "@{/orderListAllUsers}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
+                                <span class="ml-2">Orders</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href = "@{/itemList}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                                <span class="ml-2">Products</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href = "@{/userList}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+                                <span class="ml-2">Users</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href = "@{/usersRolesList}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
+                                <span class="ml-2">User's Role</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card">
+                <div class="row my-4">
+                    <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
+                        <div class="card">
+                            <h5 class="card-header">Customers</h5>
+                            <div class="card-body">
+                                <h5 class="card-title">345k</h5>
+                                <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                <p class="card-text text-success">18.2% increase since last month</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-4 mb-lg-0 col-lg-3">
+                        <div class="card">
+                            <h5 class="card-header">Products</h5>
+                            <div class="card-body">
+                                <h5 class="card-title">$2.4k</h5>
+                                <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                <p class="card-text text-success">4.6% increase since last month</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-4 mb-lg-0 col-lg-3">
+                        <div class="card">
+                            <h5 class="card-header">Purchases</h5>
+                            <div class="card-body">
+                                <h5 class="card-title">43</h5>
+                                <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                <p class="card-text text-danger">2.6% decrease since last month</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-4 mb-lg-0 col-lg-3">
+                        <div class="card">
+                            <h5 class="card-header">Revenue</h5>
+                            <div class="card-body">
+                                <h5 class="card-title">64k</h5>
+                                <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                <p class="card-text text-success">2.5% increase since last month</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        
     </body>
 </html>
