--- a/src/main/resources/templates/checkOut.html
+++ b/src/main/resources/templates/checkOut.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Check Out</title>
-    <link rel="stylesheet" href="" />
+    <title>Your Orders</title>
+    <link rel="stylesheet" href="checkOut.css" />
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
                       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
 <header class="header">
     <div class="brand">
-        <a th:href="@{/}">MarHat</a>
+        <a th:href="@{/}">HATRITA</a>
     </div>
     <div class="header-links">
         <a th:href="@{/cart}">Cart</a>
-        <a th:href="@{/signin}">Sign In</a>
-        <a th:href = "@{/adminHome}">Admin</a>
+        <a th:href="@{/login}">Sign In</a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/logout}">Sign Out</a>
+        <a sec:authorize="hasAuthority('Admin')" th:href="@{/adminHome}">Admin</a>
     </div>
 </header>
-<h1>Check Out Page</h1>
+<h1>Your Orders</h1>
 <table border="1" class="table table-striped table-responsive-md">
     <thead>
     <tr>
@@ -35,6 +37,6 @@
     </tr>
     </tbody>
 </table>
-<a th:href="@{/}">Buy more items</a>
+<a th:href="@{/}" class="btn btn-warning">Buy more items</a>
 </body>
 </html>
