--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,11 @@
         <meta charset="ISO-8859-1">
         <title>Online Shopping</title>
         <link rel="stylesheet" href="style.css" />
-<!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"-->
-<!--              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
     </head>
     
@@ -15,7 +18,7 @@
         <div class="grid-container">
             <header class="header">
                 <div class="brand">
-                    <a th:href="@{/}">MarHat</a>
+                    <a th:href="@{/}">HATRITA</a>
                 </div>
                 <div class="header-links">
                     <a th:href="@{/cart}">Cart</a>
@@ -24,24 +27,53 @@
                     <a sec:authorize="hasAuthority('Admin')" th:href="@{/adminHome}">Admin</a>
                 </div>
             </header>
+
             <main class="main">
-                <div class="content">
-                    <ul class="products">
-                        <li>
-                            <div class="product" th:each="items : ${listItems}">
-                                <img class= "product-image" th:src="${items.image}" th:alt="${items.itemName}" />
-                                <a th:href="@{/itemDetail/{id}(id=${items.itemId})}" th:text="${items.itemName}"></a>
-                                Price $<div class="product-price" th:text="${items.itemPrice}"></div>
-
-                            </div>
-                        </li>
-
-                    </ul>
+<!--                <div class="row m-1">-->
+<!--                    <div class="col-sm-1"></div>-->
+<!--                    <div class="col-sm-10">-->
+<!--                            <div class="slider-item th-fullpage hero-area">-->
+<!--                                <div class="container">-->
+<!--                                    <div class="row" style="width: 100%;">-->
+<!--                                        <div class="col-lg-8 text-center">-->
+<!--                                            <br>-->
+<!--                                            <br>-->
+<!--                                            <img th:src="@{/images/special-product.jpg}" />-->
+<!--                                            <br>-->
+<!--                                            <br>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-sm-1"></div>-->
+<!--                </div>-->
+                <div class="row m-1">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-10">
+                            <table  class="align-middle">
+                                <tr th:each="items : ${listItems}">
+                                    <div class="card custom-card text-center mr-5 mt-5 ml-5 mb-5"
+                                         style="width: 25rem; display: inline-flex; justify-content: space-between">
+                                        <img class="card-img-top" th:src="${items.image}" th:alt="${items.itemName}" >
+                                        <div class="card-body">
+                                            <h5 class="card-title"><a th:href="@{/itemDetail/{id}(id=${items.itemId})}" th:text="${items.itemName}"></a></h5>
+<!--                                            <p class="card-text" th:text="${items.itemPrice}" th:remove="tag">Price $</p>-->
+                                            <h6 th:inline="text">
+                                                [[${items.itemPrice}]] <h6>USD</h6>
+                                            </h6>
+                                        </div>
+                                    </div>
+                                </tr>
+                            </table>
+                        <div class="col-sm-1"></div>
+                    </div>
                 </div>
+
             </main>
-<!--            <footer class="footer">-->
-<!--            -->
-<!--            </footer>-->
+            <footer class="row m-1" id="footer">
+
+            </footer>
         </div>
 
     </body>
