--- a/src/main/resources/templates/itemDetail.html
+++ b/src/main/resources/templates/itemDetail.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <html>
     <head>
         <meta charset="ISO-8859-1">
         <title>Item details</title>
         <link rel="stylesheet" href="../product.css" />
-<!--        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"-->
-<!--              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
     </head>
     <body>
         <header class="header">
             <div class="brand">
-                <a th:href="@{/}">MarHat</a>
+                <a th:href="@{/}">HATRITA</a>
             </div>
             <div class="header-links">
-                <!--                    <a th:href="">Cart</a>-->
+                <a th:href="@{/cart}">Cart</a>
                 <a th:href="@{/signin}">Sign In</a>
-                <a th:href="@{/adminHome}">Admin</a>
+                <a sec:authorize="isAuthenticated()" th:href="@{/logout}">Sign Out</a>
+                <a sec:authorize="hasAuthority('Admin')" th:href="@{/adminHome}">Admin</a>
             </div>
         </header>
         <div>
-            <input type="button" value="Back" onclick="goBack()" id="goBack">
             <div class="details">
-                
-                <div class="details-info" >
-                    <div class="details-image">
-                        <img th:src="'../' + ${items.image}" th:alt="${items.itemName}"></img>
+
+                <div class="details-info">
+                    <h4 class="pName" th:text="${items.itemName}"></h4>
+                    <p>HATRITA's new autumn winter collection consisting of night sky and autumn winter color palette.
+                        The wool hat, which fully enhances the seasonality, has been released as a representative item.
+                        It is made of pure merino wool certified as woolmark.
+                        The thin and delicate Pure Merino Wool is a material that requires more effort and skill, and contains the touch of artisans who have long made high-quality felt hats.</p>
+                </div>
+                <div  >
+                    <div class="details-image" >
+                        <img class="img-thumbnail" th:src="'../' + ${items.image}" th:alt="${items.itemName}"></img>
                     </div>
-
-                        <h4 class="pName" th:text="${items.itemName}"></h4>
-                        Price: $<p class="pPrice" th:text="${items.itemPrice}"></p>
-
-
                 </div>
                 <div class="details-action">
                     <ul>
                         <li class="pPrice">
-                            Price: <p class="pPrice" th:text="${items.itemPrice}"></p>
+                            Price: <h5 class="pPrice" th:text="${items.itemPrice}"></h5>
                         </li>
 <!--                        <li class="pQuantity" th:replace="quantity_control :: quantity_control(1, ${items.itemId})">-->
                         <form action="#" th:action="@{/saveCustomerOrder/{id}(id=${items.itemId})}" th:object="${orders}"
@@ -45,7 +52,7 @@
                         <label >Order Quantity:</label>
 
 
-                            <select name="orderQuantity" id="pQuantity">
+                            <select class="btn dropdown-toggle" name="orderQuantity" id="pQuantity">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -60,8 +67,8 @@
                     </ul>
                 </div>
             </div>
-            
+
         </div>
-        <script th:src="@{../product.js}"></script>
+<!--        <script th:src="@{../product.js}"></script>-->
     </body>
 </html>
