--- a/src/main/resources/templates/list_item.html
+++ b/src/main/resources/templates/list_item.html
@@ -34,6 +34,7 @@
         </tr>
         </tbody>
  </table>
+     <a th:href="@{/adminHome}" class="btn btn-info">Back to Admin Home</a>
  </div>
 </body>
 </html>
