--- a/src/main/resources/templates/list_order_all.html
+++ b/src/main/resources/templates/list_order_all.html
@@ -10,27 +10,28 @@
 
  <div class="container my-2">
  
- <h1> Order List </h1>
- <table border="1" class="table table-striped table-responsive-md">
- 	<thead>
-        <tr>
-        	<th>Order Id</th>
-            <th>User Number</th>
-            <th>Order Status</th>
-            <th>Actions </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="orders : ${orderListAllUsers}">
-        	<td th:text="${orders.orderId}"></td>
-            <td th:text="${orders.users.userNum}"></td>
-            <td th:text="${orders.orderStatus}"></td>
-            <td> <a th:href="@{/showFormForUpdateOrder/{id}(id=${orders.orderId})}" class="btn btn-primary">Update</a>
-                 <a th:href="@{/deleteOrder/{id}(id=${orders.orderId})}" class="btn btn-danger">Delete</a>
-            </td> 
-        </tr>
-        </tbody>
- </table>
+     <h1> Order List </h1>
+     <table border="1" class="table table-striped table-responsive-md">
+        <thead>
+            <tr>
+                <th>Order Id</th>
+                <th>User Number</th>
+                <th>Order Status</th>
+                <th>Actions </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="orders : ${orderListAllUsers}">
+                <td th:text="${orders.orderId}"></td>
+                <td th:text="${orders.users.userNum}"></td>
+                <td th:text="${orders.orderStatus}"></td>
+                <td> <a th:href="@{/showFormForUpdateOrder/{id}(id=${orders.orderId})}" class="btn btn-primary">Update</a>
+                     <a th:href="@{/deleteOrder/{id}(id=${orders.orderId})}" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+            </tbody>
+     </table>
+     <a th:href="@{/adminHome}" class="btn btn-info">Back to Admin Home</a>
  </div>
 </body>
 </html>
