--- a/src/main/resources/templates/list_user.html
+++ b/src/main/resources/templates/list_user.html
@@ -36,6 +36,7 @@
         </tr>
         </tbody>
  </table>
+     <a th:href="@{/adminHome}" class="btn btn-info">Back to Admin Home</a>
  </div>
 </body>
 </html>
