--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,10 +21,16 @@
                 <h1>Registration</h1>
 
                 <form th:action="@{/registration}" method="post" th:object="${users}">
-                    <div class="form-group">
+                    <p class="error-message" th:if="${#fields.hasGlobalErrors()}"
+                       th:each="error : ${#fields.errors('global')}" th:text="${error}">Validation
+                        error</p>
+                    <div class="form-group" th:classappend="${#fields.hasErrors('userId')}? 'has-error':''">
                         <label class="control-label" for="userId"> User ID </label>
                         <input id="userId" class="form-control" th:field="*{userId}"
                                required autofocus="autofocus" />
+                        <p class="error-message"
+                           th:each="error : ${#fields.errors('userId')}" th:text="${error}">Validation
+                            error</p>
                     </div>
 
                     <div class="form-group">
