--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
         <title>Sign in</title>
         <link rel="stylesheet" href="signin.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
         
     </head>
     <body>
         <header class="header">
             <div class="brand">
-                <a th:href="@{/}">MarHat</a>
+                <a th:href="@{/}">HATRITA</a>
             </div>
             <div class="header-links">
-                <!--                    <a th:href="">Cart</a>-->
+                <a th:href="@{/cart}">Cart</a>
                 <a th:href="@{/login}">Sign In</a>
-                <a th:href = "@{/adminHome}">Admin</a>
+                <a sec:authorize="isAuthenticated()" th:href="@{/logout}">Sign Out</a>
+                <a sec:authorize="hasAuthority('Admin')" th:href="@{/adminHome}">Admin</a>
             </div>
         </header>
         <main>
@@ -44,6 +51,8 @@
 
                 <div class="container" style="background-color:#f1f1f1">
                   <button type="button" class="cancelbtn">Cancel</button>
+                    <br>
+                    <br>
                     <span><a th:href="@{/registration}">Make a new account here</a></span>
                 </div>
 
