--- a/src/main/resources/templates/update_cart.html
+++ b/src/main/resources/templates/update_cart.html
@@ -21,6 +21,7 @@
                class="form-control mb-4 col-4">
         <input type="text" th:field="*{orderQuantity}" placeholder="Order Quantity"
                class="form-control mb-4 col-4">
+        <input type="hidden" th:field="*{subTotal}" />
         <input type="hidden" th:field="*{orders.orderId}" />
         <button type="submit" class="btn btn-info col-2">Update Cart Items</button>
     </form>
